@@ -27,6 +27,7 @@
 */
 
 #include "sync.h"
+#include "iasync.h"
 #include "socket.h"
 
 #include <mpd/async.h>
@@ -116,6 +117,16 @@ mpd_sync_send_command_v(struct mpd_async *async, const struct timeval *tv0,
 
 		if (success)
 			return true;
+
+		/* no characters were written to async buffer and no
+		   space will be made available with mpd_sync_io()
+		   hence we do not have enough space */
+		if ((mpd_async_events(async) & MPD_ASYNC_EVENT_WRITE) == 0) {
+			mpd_async_set_error(async, MPD_ERROR_ARGUMENT,
+					    "Not enough buffer space for message");
+			return false;
+		}
+
 
 		if (!mpd_sync_io(async, tvp))
 			return false;
